--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -20,11 +20,11 @@
           <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/addresses/nouveau"
                  routerLinkActive="active">New</a></li>
         </ul>
-        <span class="nav-section"><i class="fa-solid fa-building mx-2"></i>ORGANISATIONS</span>
+        <span class="nav-section"><i class="fa-solid fa-building mx-2"></i>ORGANIZATIONS</span>
         <ul class="navbar-nav">
           <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
                                   routerLink="/admin/organisations"
-                                  routerLinkActive="active">List Organisations</a></li>
+                                  routerLinkActive="active">List Organizations</a></li>
           <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
                  routerLink="/admin/organisations/nouveau"
                  routerLinkActive="active">New</a></li>
