--- a/src/app/views/gp-employees/gp-employees.component.html
+++ b/src/app/views/gp-employees/gp-employees.component.html
@@ -27,8 +27,8 @@
         <td>{{emp.phoneNumber}}</td>
         <td>{{emp.creationDate}}</td>
         <td>
-          <i (click)="edit(emp.id)" class="fa fa-user-edit text-primary mx-3" title="edit"></i>
-          <i (click)="delete(emp.id)" class="fa fa-trash-alt text-danger" title="Delete"></i>
+          <i (click)="edit(emp.id)" class="fa fa-user-edit text-primary " title="edit"></i>
+          <i (click)="delete(emp.id)" class="fa fa-trash-alt text-danger ms-2" title="Delete"></i>
         </td>
       </tr>
       </tbody>
